// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status renders a component for DESKTOP 1`] = `
<Styled(StatusSFC)
  onClick={[MockFunction]}
  status="PENDING"
/>
`;

exports[`Status renders a component for DESKTOP 2`] = `
<StatusSFC
  className="sc-bxivhb cJLLkm"
  onClick={[MockFunction]}
  status="PENDING"
/>
`;

exports[`Status renders a component for MOBILE 1`] = `<div />`;
